# mega-waga

./: .gitignore  AGENTS.md  Cargo.toml  README.md  roadmap.md
.cargo/: config.toml
assets/sc/: waga_bed.scd
crates/waga-character/: Cargo.toml
crates/waga-character/src/: lib.rs
crates/waga-core/: Cargo.toml
crates/waga-core/src/: event.rs  lib.rs  memory.rs
crates/waga-events/: Cargo.toml
crates/waga-events/src/: lib.rs
crates/waga-media/: Cargo.toml
crates/waga-media/src/: lib.rs
crates/waga-memory/: Cargo.toml
crates/waga-memory/src/: lib.rs
crates/waga-music/: Cargo.toml
crates/waga-music/src/: lib.rs
crates/waga-pet/: Cargo.toml
crates/waga-pet/src/: lib.rs
crates/waga-tui/: Cargo.toml
crates/waga-tui/src/: main.rs
crates/waga-voice/: Cargo.toml
crates/waga-voice/src/: lib.rs
crates/waga-world/: Cargo.toml
crates/waga-world/src/: bridge.rs  daemon.rs  lib.rs
docs/handoffs/: 2026-07-17-local-dev-grok-build.md  2026-07-19-grok-build-bridge.md
docs/superpowers/plans/: 2026-07-16-event-log-spine.md  2026-07-16-tick-kernel-v0.md
docs/superpowers/specs/: 2026-07-16-event-log-spine-design.md  2026-07-16-memory-xp-design.md  2026-07-16-tick-kernel-v0-design.md  2026-07-17-media-music-design.md  2026-07-17-voice-notify-design.md
examples/: voice.toml
personas/: strict-cto.toml
