[workspace]
resolver = "2"
members = [
    "crates/waga-core",
    "crates/waga-events",
    "crates/waga-memory",
    "crates/waga-voice",
    "crates/waga-media",
    "crates/waga-music",
    "crates/waga-world",
    "crates/waga-character",
    "crates/waga-pet",
    "crates/waga-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["grok-waga contributors"]
repository = "https://github.com/local/grok-waga"

[workspace.dependencies]
waga-core = { path = "crates/waga-core" }
waga-events = { path = "crates/waga-events" }
waga-memory = { path = "crates/waga-memory" }
waga-voice = { path = "crates/waga-voice" }
waga-media = { path = "crates/waga-media" }
waga-music = { path = "crates/waga-music" }
waga-world = { path = "crates/waga-world" }
waga-character = { path = "crates/waga-character" }
waga-pet = { path = "crates/waga-pet" }
uuid = { version = "1", features = ["v4", "serde"] }
rosc = "0.10"

anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
dirs = "5"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
ctrlc = "3"
arboard = "3"
