[package]
name = "waga-character"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persona load and template notices for WAGA"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
waga-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
