[package]
name = "waga-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types for the World-Aware General Agent tick kernel"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
