[package]
name = "waga-events"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Append-only event log, projection, and story engine"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
waga-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
