[package]
name = "waga-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Classified memories and park skill XP"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
waga-core = { workspace = true }
waga-events = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
