[package]
name = "waga-music"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HumanMusic: MusicDirector + SuperCollider live bed"

[dependencies]
rosc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
waga-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
