[package]
name = "waga-voice"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Premium TTS notify: xAI, OpenAI, ElevenLabs"

[dependencies]
dirs = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
waga-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
