[package]
name = "waga-world"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "World Engine: sensors, event-backed tick, projection cache"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
waga-character = { workspace = true }
waga-core = { workspace = true }
waga-events = { workspace = true }
waga-memory = { workspace = true }
waga-pet = { workspace = true }
waga-voice = { workspace = true }
waga-music = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
